--- a/html.html
+++ b/html.html
@@ -6,126 +6,127 @@
     <link rel="stylesheet" type="text/css" href="style.css" /> 
   </head>
   <body>
-    <h1 style="color: White; position: relative; right: 60px;"> <img src="logo.png" height="80px" width="150px" style="position: relative; left: -10px;">Hvor enig er du med FrP?</h1>
+    <h1 style="color: White; position: relative; right: 60px;"> <img class="img" onclick="window.location.href = 'Framside.html';" src="logo.png" height="80px" width="150px" style="position: relative; left: -10px;">Hvor enig er du med FrP?</h1>
     <form>
+	<!-- Skatter, bompenger, bil, kollektiv -->
       <h2>Spørsmål 1</h2>
       <p>Er du for eller mot økt skatt for de som tjener over 1 million kroner?</p>
-      <input type="radio" name="question1" value="enig">Enig<br>
-      <input type="radio" name="question1" value="uenig">Uenig<br>
+      <input type="radio" name="question1" value="enig">for<br>
+      <input type="radio" name="question1" value="uenig">mot<br>
       <input type="radio" name="question1" value="usikker">Usikker<br>
       
       <h2>Spørsmål 2</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question2" value="enig">Enig<br>
-      <input type="radio" name="question2" value="uenig">Uenig<br>
+      <p>Er du for eller mot fjerning av bompenger?</p>
+      <input type="radio" name="question2" value="enig">for<br>
+      <input type="radio" name="question2" value="uenig">mot<br>
       <input type="radio" name="question2" value="usikker">Usikker<br>
 
       <h2>Spørsmål 3</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question3" value="enig">Enig<br>
-      <input type="radio" name="question3" value="uenig">Uenig<br>
+      <p>Er du for eller mot reduksjon av bilrelaterte avgifter, som engangsavgift av bilkjøp?</p>
+      <input type="radio" name="question3" value="enig">for<br>
+      <input type="radio" name="question3" value="uenig">mot<br>
       <input type="radio" name="question3" value="usikker">Usikker<br>
 
       <h2>Spørsmål 4</h2>
       <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question4" value="enig">Enig<br>
-      <input type="radio" name="question4" value="uenig">Uenig<br>
+      <input type="radio" name="question4" value="enig">for<br>
+      <input type="radio" name="question4" value="uenig">mot<br>
       <input type="radio" name="question4" value="usikker">Usikker<br>
-
+	<!-- Internasjonalt og innvandring -->
       <h2>Spørsmål 5</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question5" value="enig">Enig<br>
-      <input type="radio" name="question5" value="uenig">Uenig<br>
+      <p>Er du for eller mot en strengere og mer ansvarlig innvandringspolitikk?</p>
+      <input type="radio" name="question5" value="enig">for<br>
+      <input type="radio" name="question5" value="uenig">mot<br>
       <input type="radio" name="question5" value="usikker">Usikker<br>
 
       <h2>Spørsmål 6</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question6" value="enig">Enig<br>
-      <input type="radio" name="question6" value="uenig">Uenig<br>
+      <p>Er du for eller mot en reform på asylsystemet?</p>
+      <input type="radio" name="question6" value="enig">for<br>
+      <input type="radio" name="question6" value="uenig">mot<br>
       <input type="radio" name="question6" value="usikker">Usikker<br>
 
       <h2>Spørsmål 7</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question7" value="enig">Enig<br>
-      <input type="radio" name="question7" value="uenig">Uenig<br>
+      <p>Er du for eller mot EU-medlemskap?</p>
+      <input type="radio" name="question7" value="enig">for<br>
+      <input type="radio" name="question7" value="uenig">mot<br>
       <input type="radio" name="question7" value="usikker">Usikker<br>
 
       <h2>Spørsmål 8</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question8" value="enig">Enig<br>
-      <input type="radio" name="question8" value="uenig">Uenig<br>
+      <p>Er du for eller mot Norge som FN-medlem?</p>
+      <input type="radio" name="question8" value="enig">for<br>
+      <input type="radio" name="question8" value="uenig">mot<br>
       <input type="radio" name="question8" value="usikker">Usikker<br>
-
+	<!-- Olje, gass, strøm, klima -->
       <h2>Spørsmål 9</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question9" value="enig">Enig<br>
-      <input type="radio" name="question9" value="uenig">Uenig<br>
+      <p>Er du for eller mot økt satsing på petroleumsvirksomheten i Norge, og leting etter nye olje-og-gassfelt?</p>
+      <input type="radio" name="question9" value="enig">for<br>
+      <input type="radio" name="question9" value="uenig">mot<br>
       <input type="radio" name="question9" value="usikker">Usikker<br>
 
       <h2>Spørsmål 10</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question10" value="enig">Enig<br>
-      <input type="radio" name="question10" value="uenig">Uenig<br>
+      <p>Mener du at de nåværende klimatiltakene er et hinder for folket?</p>
+      <input type="radio" name="question10" value="enig">ja<br>
+      <input type="radio" name="question10" value="uenig">nei<br>
       <input type="radio" name="question10" value="usikker">Usikker<br>
 
       <h2>Spørsmål 11</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question11" value="enig">Enig<br>
-      <input type="radio" name="question11" value="uenig">Uenig<br>
+      <p>Burde klimaendringer og deres årsaker forskes mer?</p>
+      <input type="radio" name="question11" value="enig">ja<br>
+      <input type="radio" name="question11" value="uenig">nei<br>
       <input type="radio" name="question11" value="usikker">Usikker<br>
 
       <h2>Spørsmål 12</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question12" value="enig">Enig<br>
-      <input type="radio" name="question12" value="uenig">Uenig<br>
+      <p>Er du for eller mot faste, lavere strømpriser for alle?</p>
+      <input type="radio" name="question12" value="enig">for<br>
+      <input type="radio" name="question12" value="uenig">mot<br>
       <input type="radio" name="question12" value="usikker">Usikker<br>
 
       <h2>Spørsmål 13</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question13" value="enig">Enig<br>
-      <input type="radio" name="question13" value="uenig">Uenig<br>
+      <p>Er du for eller mot reduksjon av CO2-utslipp, til og med hvis det ikke er kostnadseffektivt?</p>
+      <input type="radio" name="question13" value="enig">for<br>
+      <input type="radio" name="question13" value="uenig">mot<br>
       <input type="radio" name="question13" value="usikker">Usikker<br>
-
+	<!-- Rus, helsetjeneste -->
       <h2>Spørsmål 14</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question14" value="enig">Enig<br>
-      <input type="radio" name="question14" value="uenig">Uenig<br>
+      <p>Er du for eller mot regjeringens rusreform?</p>
+      <input type="radio" name="question14" value="enig">for<br>
+      <input type="radio" name="question14" value="uenig">mot<br>
       <input type="radio" name="question14" value="usikker">Usikker<br>
 
       <h2>Spørsmål 15</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question15" value="enig">Enig<br>
-      <input type="radio" name="question15" value="uenig">Uenig<br>
+      <p>Er du for eller mot å styrke forebygging av rusmisbruk?</p>
+      <input type="radio" name="question15" value="enig">for<br>
+      <input type="radio" name="question15" value="uenig">mot<br>
       <input type="radio" name="question15" value="usikker">Usikker<br>
 
       <h2>Spørsmål 16</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question16" value="enig">Enig<br>
-      <input type="radio" name="question16" value="uenig">Uenig<br>
+      <p>Er du for eller mot tvangsbehandling av tungt rusavhengige?</p>
+      <input type="radio" name="question16" value="enig">for<br>
+      <input type="radio" name="question16" value="uenig">mot<br>
       <input type="radio" name="question16" value="usikker">Usikker<br>
 
       <h2>Spørsmål 17</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question17" value="enig">Enig<br>
-      <input type="radio" name="question17" value="uenig">Uenig<br>
+      <p>Er du for eller mot heroinassisert behandling av tungt rusavhengige?</p>
+      <input type="radio" name="question17" value="enig">for<br>
+      <input type="radio" name="question17" value="uenig">mot<br>
       <input type="radio" name="question17" value="usikker">Usikker<br>
 
       <h2>Spørsmål 18</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question18" value="enig">Enig<br>
-      <input type="radio" name="question18" value="uenig">Uenig<br>
+      <p>Er du for eller mot mødre- og fedrekvoten?</p>
+      <input type="radio" name="question18" value="enig">for<br>
+      <input type="radio" name="question18" value="uenig">mot<br>
       <input type="radio" name="question18" value="usikker">Usikker<br>
 
       <h2>Spørsmål 19</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question19" value="enig">Enig<br>
-      <input type="radio" name="question19" value="uenig">Uenig<br>
+      <p>Er du for eller mot reduserte alkoholavgifter?</p>
+      <input type="radio" name="question19" value="enig">for<br>
+      <input type="radio" name="question19" value="uenig">mot<br>
       <input type="radio" name="question19" value="usikker">Usikker<br>
-
+	<!-- Dyremishandling -->
       <h2>Spørsmål 20</h2>
-      <p>Er du for eller mot økt satsing på kollektivtransport?</p>
-      <input type="radio" name="question20" value="enig">Enig<br>
-      <input type="radio" name="question20" value="uenig">Uenig<br>
+      <p>Er du for eller mot økt straff for vold og overgrep mot dyr?</p>
+      <input type="radio" name="question20" value="enig">for<br>
+      <input type="radio" name="question20" value="uenig">mot<br>
       <input type="radio" name="question20" value="usikker">Usikker<br>
 
       <div id="blad"><img src="blad.png" height="20px" width="20px"></div>
