--- a/Framside.html
+++ b/Framside.html
@@ -1,63 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Website</title>
+	<title>FrP</title>
 	<style>
 		body {
 			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 			margin: 0;
 			padding: 0;
-            background-color: #003955;
+            background-color: #ffffff;
             color: white;
 		}
 
 		h2 {
 			margin: 20px;
+			margin-top: 27px;
+			color: black;
 		}
 
 		p {
 			background-color: #006da4;
 			margin: 20px;
 			padding: 10px;
-			border-top-left-radius: 10px;
-			border-top-right-radius: 10px;
+			border-radius: 3px;
+			line-height: 2;
 		}
 		header {
 			background-color: #004f80;
 			color: #fff;
-			padding: 10px;
+			padding: 1px;
 			text-align: center;
 			position: relative;
-		}
-		nav {
-			background-color: #f2f2f2;
-			border: 1px solid #ccc;
-			overflow: hidden;
-			padding: 10px;
-		}
-		nav a {
-			display: block;
-			float: left;
-			padding: 10px;
-			text-decoration: none;
 		}
 		section {
 			float: left;
 			margin: 10px;
 			width: 70%;
 		}
-		aside {
-			float: left;
-			margin: 10px;
-			width: 25%;
+
+		footer{
+			background-color: #003955;
 		}
-		footer {
-			background-color: #333;
-			color: #fff;
-			padding: 10px;
-			text-align: center;
-			clear: both;
-		}
+	
+
 
 		.button {
 			background-color: #003955;
@@ -66,7 +50,8 @@
 			border-radius: 5px;
 			position: relative;
 			left: 40%;
-			bottom: 50px;
+			bottom: 60px;
+			cursor: pointer;
 		}
 
 		a:hover {
@@ -76,13 +61,18 @@
 </head>
 <body>
 	<header>
-		<h1><img src="logo.png" height="80px" width="150px" style="position: relative; left: -10px;">Fremskrittspartet</h1>
+		<h1><img src="logo.png" height="80px" width="150px" style="position: relative; left: -10px;">Fremskrittspartiet</h1>
 		<a class="button" onclick="window.location.href = 'html.html';">Valgomat</a>
 	</header>
 
 	<section>
-		<h2>Section Title</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor libero sed libero mollis, ac dictum nibh maximus. Maecenas id dui lobortis, dictum arcu nec, finibus orci. Vestibulum vel ex quis purus venenatis consequat.</p>
+		<h2>Fremskrittspartiet</h2>
+		<p>Fremskrittspartiet er et liberalistisk folkeparti som jobber for lavere skatter og avgifter, bedre veier, gode sykehus og en strengere innvandringspolitikk. Vi vil at folk flest skal få en enklere hverdag, uten statlig inngrep. Vi kjemper for frihet, trygghet og ansvar. Vi vil også bekjempe terror i Norge, og sikre landets sikkerhet.<br>
+			Partiet ble stiftet i 1973 som “Anders Langes Parti til sterk nedsettelse av skatter, avgifter og offentlige inngrep” (ALP). I 1977 ble partiet omdøpt og fikk det nåværende navnet. Vi har vært aktiv fra starten. Blant annet kjempet vi telefon- og radiomonopoler fra starten, og sikret alternative tilbud for telefontilbud i 80-tallet.<br>
+			Håper du stemmer for oss!</p>
 	</section>
+
+	<footer>&nbsp</footer>
+
 </body>
 </html>
