--- a/html.html
+++ b/html.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" /> 
   </head>
   <body>
-    <h1 style="color: White; position: relative; right: 60px;"> <img class="img" onclick="window.location.href = 'Framside.html';" src="logo.png" height="80px" width="150px" style="position: relative; left: -10px;">Hvor enig er du med FrP?</h1>
+    <h1 style="color: White; position: relative; right: 60px;"> <img class="img" onclick="window.location.href = 'Framside.html';" src="logo.png" height="80px" width="150px" style="cursor: pointer; position: relative; left: -10px;">Hvor enig er du med FrP?</h1>
     <form>
 	<!-- Skatter, bompenger, bil, kollektiv -->
       <h2>Spørsmål 1</h2>
